authorization + full smart contract support